Improve registration UI and product cards

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -68,7 +68,9 @@
       <p>&copy; 2025 NERIN Repuestos. Todos los derechos reservados.</p>
     </footer>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">WhatsApp</a>
+      <a href="https://wa.me/541112345678" target="_blank">
+        <img src="/assets/whatsapp.svg" alt="WhatsApp" />
+      </a>
     </div>
   <!-- Configuración y analíticas -->
   <script type="module" src="/js/config.js"></script>
