--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -39,7 +39,9 @@
       <div id="productGrid" class="product-grid"></div>
     </main>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">WhatsApp</a>
+      <a href="https://wa.me/541112345678" target="_blank">
+        <img src="/assets/whatsapp.svg" alt="WhatsApp" />
+      </a>
     </div>
     <!-- Importamos el código como módulos ES para poder usar import/export -->
     <script type="module" src="/js/shop.js"></script>
