--- a/nerin_final_updated/frontend/cart.html
+++ b/nerin_final_updated/frontend/cart.html
@@ -29,7 +29,9 @@
       </div>
     </main>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">WhatsApp</a>
+      <a href="https://wa.me/541112345678" target="_blank">
+        <img src="/assets/whatsapp.svg" alt="WhatsApp" />
+      </a>
     </div>
     <script type="module" src="/js/cart.js"></script>
     <!-- Configuración y analíticas globales -->
