--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -28,11 +28,16 @@
         <input type="email" id="email" required />
         <label for="password">Contraseña</label>
         <input type="password" id="password" required />
+        <div class="forgot-wrapper">
+          <a href="mailto:soporte@nerin.com?subject=Recuperar%20contrase%C3%B1a">¿Olvidaste tu contraseña?</a>
+        </div>
         <button type="submit">Iniciar sesión</button>
       </form>
     </main>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">WhatsApp</a>
+      <a href="https://wa.me/541112345678" target="_blank">
+        <img src="/assets/whatsapp.svg" alt="WhatsApp" />
+      </a>
     </div>
     <!-- Importamos el código como módulo -->
     <script type="module" src="/js/login.js"></script>
