Update home page content and add contact form

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -22,9 +22,11 @@
     </header>
     <section class="hero">
       <div class="content">
-        <!-- Hero principal que comunica el alcance del ERP + e‑commerce -->
-        <h1>ERP + E‑commerce para tu negocio de repuestos</h1>
-        <p>Control total de inventario, compras y ventas en un solo lugar.</p>
+        <h1>Pantallas Samsung Originales con Garantía</h1>
+        <p>
+          Venta mayorista y minorista con envío inmediato en todo el país.
+          Asesoramiento real por WhatsApp. Stock propio en Argentina.
+        </p>
         <div class="buttons">
           <a href="/shop.html" class="button primary">Ver catálogo</a>
           <a href="/login.html" class="button secondary">Ingresar</a>
@@ -34,38 +36,105 @@
     <section class="container">
       <h2>¿Por qué elegir NERIN?</h2>
       <p>
-        Somos una empresa argentina dedicada a la distribución de repuestos de
-        celulares. Trabajamos con productos originales y brindamos atención
-        personalizada para clientes minoristas y mayoristas. Además de la tienda,
-        ofrecemos un sistema ERP completo para gestionar tu inventario, proveedores,
-        órdenes de compra, devoluciones y métricas en tiempo real.
+        En NERIN nos dedicamos a la venta de repuestos originales Samsung
+        Service Pack, con atención personalizada y entregas rápidas en todo el
+        país. Confiá en nosotros para obtener calidad real, sin intermediarios.
       </p>
+      <ul class="benefits-list">
+        <li>🛡️ Pantallas 100% originales Service Pack</li>
+        <li>🚚 Envío en 24 hs dentro de CABA</li>
+        <li>🛠️ Garantía de funcionamiento técnico</li>
+        <li>📦 Stock propio en Argentina</li>
+        <li>💬 Atención directa por WhatsApp</li>
+        <li>💳 Transferencia, Mercado Pago o efectivo</li>
+      </ul>
     </section>
 
-    <!-- Sección de tarjetas de módulos principales para destacar las nuevas funciones -->
-    <section class="features container">
-      <h2>Módulos principales</h2>
-      <div class="feature-grid">
-        <div class="feature-card">
-          <h3>Productos & Stock</h3>
-          <p>Gestiona tu catálogo, niveles de stock, almacenes y alertas de bajo stock.</p>
+    <section class="container">
+      <h2>Productos Destacados</h2>
+      <div class="product-grid">
+        <div class="product-card">
+          <img src="/assets/product1.png" alt="Samsung A12" />
+          <h3>Samsung A12 – Service Pack</h3>
+          <p class="price">$XX.XXX</p>
+          <div class="product-actions">
+            <a href="#" class="button secondary">Ver más</a>
+            <a href="#" class="button primary">Agregar al carrito</a>
+            <a href="#" class="button secondary">Pedir cotización</a>
+          </div>
         </div>
-        <div class="feature-card">
-          <h3>Proveedores & Compras</h3>
-          <p>Registra proveedores y genera órdenes de compra para reponer tu inventario.</p>
+        <div class="product-card">
+          <img src="/assets/product2.png" alt="Samsung A32" />
+          <h3>Samsung A32 – AMOLED Original</h3>
+          <p class="price">$XX.XXX</p>
+          <div class="product-actions">
+            <a href="#" class="button secondary">Ver más</a>
+            <a href="#" class="button primary">Agregar al carrito</a>
+            <a href="#" class="button secondary">Pedir cotización</a>
+          </div>
         </div>
-        <div class="feature-card">
-          <h3>Analíticas & Métricas</h3>
-          <p>Consulta ventas por categoría, productos más vendidos y clientes principales.</p>
+        <div class="product-card">
+          <img src="/assets/product3.png" alt="Samsung S21 FE" />
+          <h3>Samsung S21 FE – Service Pack</h3>
+          <p class="price">$XX.XXX</p>
+          <div class="product-actions">
+            <a href="#" class="button secondary">Ver más</a>
+            <a href="#" class="button primary">Agregar al carrito</a>
+            <a href="#" class="button secondary">Pedir cotización</a>
+          </div>
         </div>
-        <div class="feature-card">
-          <h3>Devoluciones</h3>
-          <p>Administra solicitudes de devolución con control anti‑fraude integrado.</p>
+        <div class="product-card">
+          <img src="/assets/product4.png" alt="Samsung A54" />
+          <h3>Samsung A54 – OLED Original</h3>
+          <p class="price">$XX.XXX</p>
+          <div class="product-actions">
+            <a href="#" class="button secondary">Ver más</a>
+            <a href="#" class="button primary">Agregar al carrito</a>
+            <a href="#" class="button secondary">Pedir cotización</a>
+          </div>
         </div>
       </div>
     </section>
+
+    <section class="container">
+      <h2>¿Quiénes somos?</h2>
+      <p>
+        Somos NERIN Repuestos, una empresa argentina enfocada exclusivamente en
+        pantallas Samsung originales. Vendemos tanto a técnicos como a usuarios
+        finales. Sabemos lo que necesitás y trabajamos para darte velocidad,
+        confianza y calidad verdadera.
+      </p>
+    </section>
+
+    <section id="contacto" class="container">
+      <h2>Contactanos rápido</h2>
+      <form id="contactForm" class="login-container">
+        <input type="text" id="contactName" placeholder="Nombre y apellido" />
+        <input type="tel" id="contactPhone" placeholder="WhatsApp" />
+        <input type="text" id="contactModel" placeholder="Modelo buscado" />
+        <select id="contactType">
+          <option value="tecnico">Técnico</option>
+          <option value="revendedor">Revendedor</option>
+          <option value="particular">Particular</option>
+        </select>
+        <button type="submit" class="button primary">Solicitar cotización</button>
+      </form>
+    </section>
+
     <footer class="container">
-      <p>&copy; 2025 NERIN Repuestos. Todos los derechos reservados.</p>
+      <p>📞 WhatsApp | 📧 Email | 📍 CABA</p>
+      <p>
+        <a href="https://instagram.com" target="_blank">Instagram</a> |
+        <a href="/index.html">Inicio</a> |
+        <a href="/shop.html">Catálogo</a> |
+        <a href="#contacto">Contacto</a> |
+        <a href="/terms.html">Términos y condiciones</a>
+      </p>
+      <p class="legal">
+        NERIN comercializa repuestos Samsung originales Service Pack adquiridos
+        por canales oficiales. No tenemos vínculo directo con Samsung
+        Electronics.
+      </p>
     </footer>
     <div id="whatsapp-button">
       <a href="https://wa.me/541112345678" target="_blank">
@@ -73,6 +142,7 @@
       </a>
     </div>
   <!-- Configuración y analíticas -->
+  <script type="module" src="/js/index.js"></script>
   <script type="module" src="/js/config.js"></script>
   </body>
 </html>
