--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -52,48 +52,7 @@
 
     <section class="container">
       <h2>Productos Destacados</h2>
-      <div class="product-grid">
-        <div class="product-card">
-          <img src="/assets/product1.png" alt="Samsung A12" />
-          <h3>Samsung A12 – Service Pack</h3>
-          <p class="price">$XX.XXX</p>
-          <div class="product-actions">
-            <a href="#" class="button secondary">Ver más</a>
-            <a href="#" class="button primary">Agregar al carrito</a>
-            <a href="#" class="button secondary">Pedir cotización</a>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="/assets/product2.png" alt="Samsung A32" />
-          <h3>Samsung A32 – AMOLED Original</h3>
-          <p class="price">$XX.XXX</p>
-          <div class="product-actions">
-            <a href="#" class="button secondary">Ver más</a>
-            <a href="#" class="button primary">Agregar al carrito</a>
-            <a href="#" class="button secondary">Pedir cotización</a>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="/assets/product3.png" alt="Samsung S21 FE" />
-          <h3>Samsung S21 FE – Service Pack</h3>
-          <p class="price">$XX.XXX</p>
-          <div class="product-actions">
-            <a href="#" class="button secondary">Ver más</a>
-            <a href="#" class="button primary">Agregar al carrito</a>
-            <a href="#" class="button secondary">Pedir cotización</a>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="/assets/product4.png" alt="Samsung A54" />
-          <h3>Samsung A54 – OLED Original</h3>
-          <p class="price">$XX.XXX</p>
-          <div class="product-actions">
-            <a href="#" class="button secondary">Ver más</a>
-            <a href="#" class="button primary">Agregar al carrito</a>
-            <a href="#" class="button secondary">Pedir cotización</a>
-          </div>
-        </div>
-      </div>
+      <div id="featuredGrid" class="product-grid"></div>
     </section>
 
     <section class="container">
