chore: format project with Prettier

--- a/nerin_final_updated/frontend/cart.html
+++ b/nerin_final_updated/frontend/cart.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>NERIN – Carrito</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -23,9 +26,13 @@
       <h2>Carrito de compras</h2>
       <div id="cartItems"></div>
       <div id="cartSummary" class="cart-summary"></div>
-      <div id="cartActions" class="cart-actions" style="display: none;">
-        <button id="whatsappBtn" class="button primary">Enviar por WhatsApp</button>
-        <button id="confirmBtn" class="button secondary">Confirmar pedido</button>
+      <div id="cartActions" class="cart-actions" style="display: none">
+        <button id="whatsappBtn" class="button primary">
+          Enviar por WhatsApp
+        </button>
+        <button id="confirmBtn" class="button secondary">
+          Confirmar pedido
+        </button>
       </div>
     </main>
     <div id="whatsapp-button">
