--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>NERIN Repuestos – Pantallas originales</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -76,7 +79,9 @@
           <option value="revendedor">Revendedor</option>
           <option value="particular">Particular</option>
         </select>
-        <button type="submit" class="button primary">Solicitar cotización</button>
+        <button type="submit" class="button primary">
+          Solicitar cotización
+        </button>
       </form>
     </section>
 
@@ -84,8 +89,7 @@
       <p>📞 WhatsApp | 📧 Email | 📍 CABA</p>
       <p>
         <a href="https://instagram.com" target="_blank">Instagram</a> |
-        <a href="/index.html">Inicio</a> |
-        <a href="/shop.html">Catálogo</a> |
+        <a href="/index.html">Inicio</a> | <a href="/shop.html">Catálogo</a> |
         <a href="#contacto">Contacto</a> |
         <a href="/terms.html">Términos y condiciones</a>
       </p>
@@ -100,8 +104,8 @@
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
       </a>
     </div>
-  <!-- Configuración y analíticas -->
-  <script type="module" src="/js/index.js"></script>
-  <script type="module" src="/js/config.js"></script>
+    <!-- Configuración y analíticas -->
+    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="/js/config.js"></script>
   </body>
 </html>
