--- a/nerin_final_updated/frontend/invoice.html
+++ b/nerin_final_updated/frontend/invoice.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>Factura – NERIN</title>
     <link rel="stylesheet" href="/style.css" />
     <style>
@@ -59,7 +62,9 @@
     <main class="container">
       <h2>Factura</h2>
       <div id="invoiceContainer"></div>
-      <button id="printBtn" class="print-btn" style="display:none;">Imprimir / Descargar PDF</button>
+      <button id="printBtn" class="print-btn" style="display: none">
+        Imprimir / Descargar PDF
+      </button>
     </main>
     <script type="module" src="/js/invoice.js"></script>
     <!-- Configuración y analíticas globales para actualizar navegación -->
