--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>NERIN – Acceder</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -21,15 +24,19 @@
     </header>
     <main class="login-container">
       <h2>Acceder</h2>
-      <p>Si eres cliente mayorista, inicia sesión para ver precios exclusivos.</p>
-      <div id="error" class="error-message" style="display: none;"></div>
+      <p>
+        Si eres cliente mayorista, inicia sesión para ver precios exclusivos.
+      </p>
+      <div id="error" class="error-message" style="display: none"></div>
       <form id="loginForm">
         <label for="email">Correo electrónico</label>
         <input type="email" id="email" required />
         <label for="password">Contraseña</label>
         <input type="password" id="password" required />
         <div class="forgot-wrapper">
-          <a href="mailto:soporte@nerin.com?subject=Recuperar%20contrase%C3%B1a">¿Olvidaste tu contraseña?</a>
+          <a href="mailto:soporte@nerin.com?subject=Recuperar%20contrase%C3%B1a"
+            >¿Olvidaste tu contraseña?</a
+          >
         </div>
         <button type="submit">Iniciar sesión</button>
       </form>
