--- a/nerin_final_updated/frontend/register.html
+++ b/nerin_final_updated/frontend/register.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>Registrarse – NERIN</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -17,7 +20,9 @@
           <!-- Enlace de acceso; updateNav lo cambia según rol -->
           <li><a href="/login.html">Acceder</a></li>
           <!-- Enlace de registro marcado con clase especial para que updateNav no lo duplique -->
-          <li class="signup-item"><a href="/register.html" class="active">Registrarse</a></li>
+          <li class="signup-item">
+            <a href="/register.html" class="active">Registrarse</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -25,16 +30,34 @@
       <h2>Crear cuenta</h2>
       <form id="registerForm" class="auth-form">
         <input type="text" id="regName" placeholder="Nombre completo" />
-        <input type="email" id="regEmail" placeholder="Correo electrónico" required />
-        <input type="password" id="regPassword" placeholder="Contraseña" required />
-        <input type="password" id="regConfirm" placeholder="Confirmar contraseña" required />
+        <input
+          type="email"
+          id="regEmail"
+          placeholder="Correo electrónico"
+          required
+        />
+        <input
+          type="password"
+          id="regPassword"
+          placeholder="Contraseña"
+          required
+        />
+        <input
+          type="password"
+          id="regConfirm"
+          placeholder="Confirmar contraseña"
+          required
+        />
         <label for="regRole">Tipo de cuenta</label>
         <select id="regRole">
           <option value="mayorista">Mayorista</option>
           <option value="minorista">Minorista</option>
         </select>
         <button type="submit" class="button primary">Registrarse</button>
-        <p id="regError" style="color:var(--color-danger); display:none; margin-top:0.5rem;"></p>
+        <p
+          id="regError"
+          style="color: var(--color-danger); display: none; margin-top: 0.5rem"
+        ></p>
       </form>
     </main>
     <script type="module" src="/js/register.js"></script>
