feat(metrics): add interactive sales chart

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -218,6 +218,7 @@
       <section id="metricsSection" class="admin-section" style="display: none">
         <h3>Métricas</h3>
         <div id="metricsContent"></div>
+        <canvas id="salesChartCanvas" height="200"></canvas>
       </section>
 
       <!-- Sección de devoluciones -->
@@ -396,6 +397,7 @@
         <div id="analyticsContent"></div>
       </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/js/admin.js"></script>
     <!-- Configuración y analíticas globales -->
     <script type="module" src="/js/config.js"></script>
