Replace admin analytics with Chart.js dashboard

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -394,7 +394,7 @@
           devoluciones y clientes. Estas métricas te ayudan a tomar decisiones
           informadas.
         </p>
-        <div id="analyticsContent"></div>
+        <div id="analytics-dashboard"></div>
       </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
