Integrate Mercado Pago checkout

--- a/nerin_final_updated/frontend/cart.html
+++ b/nerin_final_updated/frontend/cart.html
@@ -34,6 +34,7 @@
           Confirmar pedido
         </button>
       </div>
+      <div id="orderSummary" class="payment-summary" style="display: none"></div>
     </main>
     <div id="whatsapp-button">
       <a href="https://wa.me/541112345678" target="_blank">
