--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -176,14 +176,26 @@
       </section>
       <section id="ordersSection" class="admin-section" style="display: none">
         <h3>Gestión de pedidos</h3>
+        <label for="orderStatusFilter">Filtrar por pago:</label>
+        <select id="orderStatusFilter">
+          <option value="todos">Todos</option>
+          <option value="pagado">Pagado</option>
+          <option value="pendiente">Pendiente</option>
+          <option value="rechazado">Rechazado</option>
+        </select>
         <div class="table-wrapper">
           <table class="admin-table" id="ordersTable">
             <thead>
               <tr>
                 <th>ID</th>
                 <th>Fecha</th>
+                <th>Cliente</th>
+                <th>Teléfono</th>
+                <th>Dirección</th>
                 <th>Productos</th>
-                <th>Estado</th>
+                <th>Total</th>
+                <th>Pago</th>
+                <th>Envío</th>
                 <th>Seguimiento</th>
                 <th>Transportista</th>
                 <th>Factura</th>
