--- a/frontend/estado-pedido.html
+++ b/frontend/estado-pedido.html
@@ -16,11 +16,11 @@
       try {
         const res = await axios.get(`/api/orders/${orderId}/status`);
         const status = res.data.status;
-        if (status === 'approved' || status === 'aprobado') {
+        if (status === 'aprobado') {
           messageEl.textContent = 'Gracias por tu compra';
           document.getElementById('paso').textContent = 'Paso 3 de 3: Pago aprobado';
           clearInterval(interval);
-        } else if (status === 'rejected' || status === 'rechazado') {
+        } else if (status === 'rechazado') {
           messageEl.textContent = 'El pago fue rechazado';
           document.getElementById('paso').textContent = 'Paso 3 de 3: Pago rechazado';
           clearInterval(interval);
