Implement Mercado Pago order tracking

--- a/frontend/estado-pedido.html
+++ b/frontend/estado-pedido.html
@@ -6,23 +6,28 @@
 </head>
 <body>
   <h1 id="message">Procesando pago...</h1>
+  <p id="step">Paso 2 de 3</p>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
     const orderId = window.location.pathname.split('/').pop();
     const messageEl = document.getElementById('message');
+    const stepEl = document.getElementById('step');
 
     async function checkStatus() {
       try {
-        const res = await axios.get(`http://localhost:3000/api/orders/${orderId}/status`);
+        const res = await axios.get(`/api/orders/${orderId}/status`);
         const status = res.data.status;
         if (status === 'approved' || status === 'aprobado') {
-          messageEl.textContent = 'Gracias por tu compra';
+          messageEl.textContent = 'Pago aprobado';
+          stepEl.textContent = 'Paso 3 de 3';
           clearInterval(interval);
         } else if (status === 'rejected' || status === 'rechazado') {
-          messageEl.textContent = 'El pago fue rechazado';
+          messageEl.textContent = 'Pago rechazado';
+          stepEl.textContent = 'Paso 3 de 3';
           clearInterval(interval);
         } else {
           messageEl.textContent = `Pago ${status}`;
+          stepEl.textContent = 'Paso 2 de 3';
         }
       } catch (err) {
         console.error(err);
