fix admin nav active link

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -24,7 +24,8 @@
             <li><a href="/shop.html">Productos</a></li>
             <li><a href="/contact.html">Contacto</a></li>
             <li><a href="/cart.html">Carrito</a></li>
-            <li><a href="/login.html">Acceder</a></li>
+            <!-- Mantener el enlace de acceso para permitir que updateNav lo reemplace o conserve -->
+            <li><a href="/login.html" class="active">Acceder</a></li>
           </ul>
         </nav>
         <!-- Selector de idioma -->
