Improve checkout flow with account check and dynamic shipping

--- a/nerin_final_updated/frontend/checkout-steps.html
+++ b/nerin_final_updated/frontend/checkout-steps.html
@@ -14,13 +14,23 @@
       </div>
     </header>
     <main class="container">
+      <ol class="progress-tracker" id="progress">
+        <li class="step current">Datos</li>
+        <li class="step todo">Revisión</li>
+        <li class="step todo">Confirmación</li>
+      </ol>
       <div id="step1" class="checkout-step">
         <h2>Paso 1 de 3: Datos</h2>
         <form id="formDatos" class="login-container">
           <input type="text" id="nombre" placeholder="Nombre" required />
           <input type="text" id="apellido" placeholder="Apellido" required />
           <input type="email" id="email" placeholder="Email" required />
-          <input type="tel" id="telefono" placeholder="Teléfono" required />
+          <div id="emailExists" class="alert" style="display:none">
+            ¿Ya tenés cuenta?
+            <a href="/login.html">Iniciar sesión</a>
+            o <a href="#" id="seguirInvitado">continuar como invitado</a>.
+          </div>
+          <input type="tel" id="telefono" placeholder="Teléfono" pattern="[0-9]{6,}" required />
           <button type="submit">Continuar</button>
         </form>
       </div>
@@ -30,7 +40,7 @@
           <input type="text" id="provincia" placeholder="Provincia" required />
           <input type="text" id="localidad" placeholder="Localidad" required />
           <input type="text" id="direccion" placeholder="Dirección" required />
-          <input type="text" id="cp" placeholder="Código Postal" required />
+          <input type="text" id="cp" placeholder="Código Postal" pattern="[0-9]{4,8}" required />
           <select id="metodo" required>
             <option value="">Método</option>
             <option value="retiro">Retiro en local</option>
@@ -41,9 +51,14 @@
         </form>
       </div>
       <div id="step3" class="checkout-step" style="display:none">
-        <h2>Paso 3 de 3: Pago</h2>
+        <h2>Paso 3 de 3: Revisión</h2>
         <div id="resumen"></div>
         <button id="confirmar">Confirmar compra</button>
+      </div>
+      <div id="step4" class="checkout-step" style="display:none">
+        <h2>¡Pedido realizado!</h2>
+        <div id="finalSummary"></div>
+        <a id="trackOrder" class="btn">Seguir mi pedido</a>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
