--- a/nerin_final_updated/frontend/checkout-form.html
+++ b/nerin_final_updated/frontend/checkout-form.html
@@ -1,403 +1,11 @@
 <!doctype html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <style>
-      :root {
-        --color-primary: #007bff;
-        --color-border: #d1d5db;
-        --color-danger: #ef4444;
-        --radius: 1rem;
-        --transition: 0.3s ease;
-        --color-page: #f5f6f8;
-        --color-bg: #ffffff;
-        --color-text: #111111;
-        --color-muted: #6b7280;
-        --shadow-sm: rgba(0, 0, 0, 0.04);
-        --shadow-lg: rgba(0, 0, 0, 0.08);
-      }
-      /*
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --color-page: #121212;
-        --color-bg: #1a1a1a;
-        --color-text: #f3f3f3;
-        --color-border: #333;
-        --shadow-sm: rgba(0,0,0,0.5);
-        --shadow-lg: rgba(0,0,0,0.8);
-      }
-    }
-    */
-      * {
-        box-sizing: border-box;
-      }
-      html {
-        scroll-behavior: smooth;
-      }
-      body {
-        font-family:
-          "Inter",
-          -apple-system,
-          BlinkMacSystemFont,
-          "Helvetica Neue",
-          Helvetica,
-          Arial,
-          sans-serif;
-        background: var(--color-page);
-        color: var(--color-text);
-        margin: 0;
-        padding: 0;
-        -webkit-font-smoothing: antialiased;
-        -webkit-tap-highlight-color: transparent;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .container {
-        max-width: 850px;
-        width: 100%;
-        margin: 2rem auto;
-        padding: 0 1.5rem;
-        animation: fadeIn 0.6s ease-out both;
-      }
-      h2 {
-        margin-bottom: 1.5rem;
-        font-weight: 600;
-        text-align: center;
-      }
-      .shipping-form {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 1.25rem;
-        padding: 1.5rem;
-        background: var(--color-bg);
-        border-radius: var(--radius);
-        box-shadow: 0 4px 20px var(--shadow-sm);
-      }
-      .form-field {
-        position: relative;
-        margin: 0;
-      }
-      .form-field input,
-      .form-field select,
-      .form-field textarea {
-        width: 100%;
-        padding: 1rem 1rem 1rem 2.5rem;
-        font-size: 1rem;
-        border: 1px solid var(--color-border);
-        border-radius: var(--radius);
-        background: var(--color-bg);
-        outline: none;
-        transition:
-          border-color var(--transition),
-          box-shadow var(--transition),
-          background-color var(--transition);
-      }
-      .form-field textarea {
-        resize: vertical;
-        min-height: 120px;
-      }
-      .form-field label {
-        position: absolute;
-        left: 2.5rem;
-        top: 50%;
-        transform: translateY(-50%);
-        padding: 0 0.25rem;
-        color: var(--color-muted);
-        pointer-events: none;
-        background: var(--color-bg);
-        max-width: calc(100% - 3rem);
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        transition:
-          transform var(--transition),
-          color var(--transition),
-          font-size var(--transition);
-      }
-      .form-field i {
-        position: absolute;
-        left: 1rem;
-        top: 50%;
-        transform: translateY(-50%);
-        color: var(--color-muted);
-        pointer-events: none;
-        line-height: 1;
-      }
-      .form-field:focus-within i {
-        color: var(--color-primary);
-      }
-      .form-field input:focus,
-      .form-field select:focus,
-      .form-field textarea:focus {
-        border-color: var(--color-primary);
-        box-shadow: 0 0 0 3px rgba(10, 132, 255, 0.15);
-      }
-      .form-field input:focus ~ label,
-      .form-field input:not(:placeholder-shown) ~ label,
-      .form-field select:focus ~ label,
-      .form-field select:not([value=""]) ~ label,
-      .form-field textarea:focus ~ label,
-      .form-field textarea:not(:placeholder-shown) ~ label {
-        top: 0.4rem;
-        transform: translateY(-120%);
-        font-size: 0.75rem;
-        color: var(--color-primary);
-      }
-      .form-field input:required:invalid,
-      .form-field select:required:invalid,
-      .form-field textarea:required:invalid {
-        border-color: var(--color-danger);
-      }
-      .form-field .invalid {
-        border-color: var(--color-danger);
-      }
-
-      .error-message {
-        display: block;
-        font-size: 0.85rem;
-        color: var(--color-danger);
-        margin-top: 0.25rem;
-        opacity: 0;
-        transition: opacity var(--transition);
-      }
-
-      .error-message.show {
-        opacity: 1;
-      }
-
-      .progress {
-        text-align: center;
-        background: #e5e7eb;
-        padding: 0.75rem 1rem;
-        border-radius: var(--radius);
-        font-weight: 500;
-        margin-bottom: 1rem;
-      }
-
-      .loading-overlay {
-        position: fixed;
-        inset: 0;
-        background: rgba(255, 255, 255, 0.8);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        opacity: 0;
-        pointer-events: none;
-        transition: opacity var(--transition);
-        z-index: 1000;
-      }
-
-      .loading-overlay.active {
-        opacity: 1;
-        pointer-events: all;
-      }
-
-      .spinner {
-        width: 2rem;
-        height: 2rem;
-        border: 3px solid var(--color-primary);
-        border-top-color: transparent;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-      }
-
-      .fade-out {
-        opacity: 0;
-        transition: opacity var(--transition);
-      }
-      .shipping-form button {
-        width: 100%;
-        margin-top: 1rem;
-        padding: 1rem;
-        border: none;
-        border-radius: var(--radius);
-        background: linear-gradient(135deg, #007bff, #0056d2);
-        color: #fff;
-        font-size: 1rem;
-        font-weight: 600;
-        cursor: pointer;
-        box-shadow: 0 4px 12px var(--shadow-lg);
-        outline: none;
-        transition:
-          background-color var(--transition),
-          box-shadow var(--transition),
-          transform var(--transition);
-      }
-      .shipping-form button:hover {
-        background: linear-gradient(135deg, #238bfe, #0050c6);
-        box-shadow: 0 6px 16px var(--shadow-lg);
-        transform: translateY(-1px);
-      }
-      .shipping-form button:focus {
-        box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.4);
-      }
-      .shipping-form button:active {
-        transform: translateY(1px) scale(0.98);
-      }
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      @keyframes spin {
-        to {
-          transform: rotate(360deg);
-        }
-      }
-      @media (min-width: 600px) {
-        .shipping-form {
-          grid-template-columns: 1fr 1fr;
-          column-gap: 2rem;
-        }
-        .shipping-form button {
-          grid-column: span 2;
-        }
-      }
-    </style>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <meta http-equiv="refresh" content="0; url=/checkout-steps.html" />
+    <title>Redirigiendo…</title>
+    <script>window.location.replace('/checkout-steps.html');</script>
   </head>
   <body>
-    <main class="container">
-      <h2>Completar datos de envío</h2>
-      <div class="progress">Paso 1 de 3: Datos de envío</div>
-      <form class="shipping-form" novalidate>
-        <div class="form-field">
-          <i class="fa fa-user"></i>
-          <input
-            type="text"
-            id="nombre"
-            name="nombre"
-            placeholder=" "
-            required
-          />
-          <label for="nombre">Nombre completo</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-envelope"></i>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder=" "
-            required
-          />
-          <label for="email">Email</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-phone"></i>
-          <input
-            type="tel"
-            id="telefono"
-            name="telefono"
-            placeholder=" "
-            required
-          />
-          <label for="telefono">Teléfono</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-road"></i>
-          <input type="text" id="calle" name="calle" placeholder=" " required />
-          <label for="calle">Calle</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-hashtag"></i>
-          <input
-            type="text"
-            id="numero"
-            name="numero"
-            placeholder=" "
-            required
-          />
-          <label for="numero">Número</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-building"></i>
-          <input type="text" id="piso" name="piso" placeholder=" " />
-          <label for="piso">Piso</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-map-marker-alt"></i>
-          <input
-            type="text"
-            id="localidad"
-            name="localidad"
-            placeholder=" "
-            required
-          />
-          <label for="localidad">Localidad</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-map-marker-alt"></i>
-          <input
-            type="text"
-            id="provincia"
-            name="provincia"
-            placeholder=" "
-            required
-          />
-          <label for="provincia">Provincia</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-tag"></i>
-          <input type="text" id="cp" name="cp" placeholder=" " required />
-          <label for="cp">Código Postal</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field">
-          <i class="fa fa-truck"></i>
-          <select id="metodo_envio" name="metodo_envio" required>
-            <option value="" disabled selected hidden></option>
-            <option value="retiro">Retiro</option>
-            <option value="domicilio">Envío a domicilio</option>
-          </select>
-          <label for="metodo_envio">Método de envío</label>
-          <small class="error-message"></small>
-        </div>
-        <div class="form-field" style="grid-column: span 2">
-          <i class="fa fa-comment"></i>
-          <textarea
-            id="comentarios"
-            name="comentarios"
-            placeholder=" "
-          ></textarea>
-          <label for="comentarios">Comentarios</label>
-          <small class="error-message"></small>
-        </div>
-        <button type="submit">Continuar con pago</button>
-      </form>
-    </main>
-    <div class="loading-overlay" id="loading"><div class="spinner"></div></div>
-    <script type="module" src="/js/checkout-form.js"></script>
-    <!-- Configuración global y navegación -->
-  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script type="module" src="/js/config.js"></script>
+    <p>Redirigiendo al nuevo checkout...</p>
   </body>
 </html>
