--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,8 @@
       // el flujo de checkout completo.
       if (saved && saved.email && saved.direccion) {
         try {
-          const res = await fetch('/crear-preferencia', {
+          const res = await fetch(`${API_BASE_URL}/crear-preferencia`, {
+            mode: 'cors',
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({
