feat: agrega página de Términos y Condiciones (ARG) + link en footer

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -99,7 +99,7 @@
         <a href="/index.html">Inicio</a> | <a href="/shop.html">Catálogo</a> |
         <a href="/contact.html">Contacto</a> |
         <a href="/seguimiento.html">Seguir mi pedido</a> |
-        <a href="/terms.html">Términos y condiciones</a>
+        <a href="/pages/terminos.html">Términos y Condiciones</a>
       </p>
       <p class="legal">
         NERIN comercializa repuestos Samsung originales Service Pack adquiridos
