feat: improve terms page mobile styling

--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -49,6 +49,25 @@
       font-size: 0.875rem;
       color: #555;
     }
+
+    @media (max-width: 600px) {
+      main {
+        margin: 1rem auto;
+        padding: 0 0.75rem;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      h2 {
+        font-size: 1.1rem;
+      }
+
+      nav ul {
+        padding-left: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
